# ai-chat-ehr

./: .env.example  Dockerfile.base  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/anonymizer/: architecture.md  development.md  phi_catalog.md
docs/db/: schema.sql
docs/openapi/: api_gateway.json  chain_executor.json  patient_context.json  prompt_catalog.json
repositories/: __init__.py  emr.py
repositories/fixtures/patients/: 123456_context.json  123456_record.json
scripts/: dev.sh  run_anonymizer.py
services/: __init__.py
services/anonymizer/: Dockerfile  LOGGING.md  README.md  __init__.py  app.py  logging_utils.py  main.py  presidio_engine.py  reporting.py  schemas.py  service.py
services/anonymizer/app/: __init__.py  logging.py  main.py
services/anonymizer/app/anonymization/: presidio_engine.py  replacement.py
services/anonymizer/app/clients/: __init__.py  firestore_client.py  postgres_repository.py
services/anonymizer/app/config/: __init__.py  settings.py
services/anonymizer/app/models/: __init__.py  patient.py
services/anonymizer/app/pipelines/: __init__.py  ddl_parser.py  patient_pipeline.py  resilience.py
services/anonymizer/clients/: __init__.py
services/anonymizer/config/: __init__.py
services/anonymizer/ddls/: patients.ddl
services/anonymizer/firestore/: __init__.py  client.py  fixtures.py
services/anonymizer/firestore_fixtures/: README.md
services/anonymizer/models/: __init__.py  firestore.py  postgres.py  transformation_event.py
services/anonymizer/pipelines/: __init__.py
services/anonymizer/storage/: ddl.py  interfaces.py  postgres.py  sqlfile.py
services/anonymizer/tests/: __init__.py  test_ddl_parser.py  test_main.py  test_patient_pipeline_anonymization.py  test_patient_pipeline_resilience.py  test_pipeline_mapping.py  test_presidio_engine.py  test_replacement.py  test_settings_configuration.py
services/api_gateway/: Dockerfile  app.py  main.py
services/chain_executor/: Dockerfile  app.py  main.py
services/generator/: Dockerfile  README.md  __init__.py  app.py  config.py  constants.py  main.py  observability.py
services/generator/models/: __init__.py  consultation.py  patient.py  patient_records.py  patient_related.py
services/generator/patient/: __init__.py  faker_profiles.py
services/patient_context/: Dockerfile  app.py  main.py  mappers.py
services/prompt_catalog/: Dockerfile  app.py  main.py  repositories.py
shared/: main.py
shared/config/: settings.py
shared/http/: __init__.py  errors.py
shared/llm/: __init__.py  llmmodels.py  prompt_builder.py  providers.py
shared/llm/adapters/: __init__.py  _base.py  anthropic.py  azure.py  openai.py  vertex.py
shared/llm/chains/: __init__.py  category_classifier.py  model_classifier.py
shared/models/: __init__.py  chain.py  chat.py
shared/observability/: __init__.py  audit.py  logger.py  middleware.py
tests/api_gateway/: test_import.py
tests/chain_executor/: test_category_cache.py  test_execute_chain.py  test_models_endpoint.py  test_patient_context_client.py
tests/patient_context/: test_app.py  test_fixtures.py
tests/prompt_catalog/: test_categories_endpoint.py  test_repositories.py
tests/scripts/: test_run_anonymizer.py
tests/services/anonymizer/: test_app_anonymize_document.py  test_firestore_client.py  test_logging_utils.py  test_presidio_engine.py  test_reporting.py  test_service_configuration.py  test_service_dob_generalization.py  test_service_transformation_events.py  test_storage_sqlfile.py
tests/services/anonymizer/app/: test_patient_pipeline.py
tests/services/generator/: test_models_patient.py  test_models_patient_records.py  test_observability.py
tests/shared/: test_logger.py  test_providers.py
tests/shared/llm/: test_model_classifier.py  test_retry_wrapping.py
(+3 files in other folders)
