[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "shared*",
    "services*",
    "repositories*",
]
exclude = [
    "tests*",
]

[project]
name = "ai-chat-ehr"
version = "0.1.0"
description = "Service-oriented FastAPI application scaffolding for ChatEHR experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ChatEHR Team" }
]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<0.30",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "httpx>=0.27,<0.28",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "openai>=1.14,<2",
    "anthropic>=0.21,<0.22",
    "loguru>=0.7,<0.8",
    "structlog>=24.1,<25",
    "tenacity>=8.2,<9"
]

[project.urls]
Homepage = "https://github.com/"
Source = "https://github.com/"
Issues = "https://github.com/"
