[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "shared*",
    "services*",
    "repositories*",
]
exclude = [
    "tests*",
]

[project]
name = "ai-chat-ehr"
version = "0.1.0"
description = "Service-oriented FastAPI application scaffolding for ChatEHR experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ChatEHR Team" }
]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<0.30",
    "langchain==0.3.27",
    "langchain-core>=0.3.72,<1",
    "langchain-community==0.3.27",
    "langchain-openai>=0.3,<0.4",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-google-vertexai==2.1.2",
    "httpx>=0.28,<0.29",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "openai>=1.14,<2",
    "anthropic>=0.67,<1",
    "loguru>=0.7,<0.8",
    "structlog>=24.1,<25",
    "tenacity>=8.2,<9"
]

[project.urls]
Homepage = "https://github.com/"
Source = "https://github.com/"
Issues = "https://github.com/"

[tool.mypy]
exclude = "(^|/)build/"
