[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "shared*",
    "services*",
    "repositories*",
]
exclude = [
    "tests*",
]

[project]
name = "ai-chat-ehr"
version = "0.1.0"
description = "Service-oriented FastAPI application scaffolding for ChatEHR experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ChatEHR Team" }
]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<0.30",
    "langchain==0.3.27",
    "langchain-core>=0.3.72,<0.4",
    "langchain-community==0.3.27",
    "langchain-openai>=0.3,<0.4",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-google-vertexai==2.1.2",
    "httpx>=0.28,<0.29",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "faker>=22,<25",
    "openai>=1.14,<2",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "anthropic>=0.67,<1",
    "loguru>=0.7,<0.8",
    "structlog>=24.1,<25",
    "tenacity>=8.2,<9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-anyio>=0.23,<0.24",
]

[project.urls]
Homepage = "https://github.com/"
Source = "https://github.com/"
Issues = "https://github.com/"

[tool.mypy]
exclude = "(^|/)build/|^tests/"

[[tool.mypy.overrides]]
module = ["psycopg", "psycopg_pool"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.cloud.firestore"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
